syntax = "proto3";

package article;

service ArticleService {
  rpc List (ArticleListDto) returns (stream Article) {}
  rpc Read (ArticleReadDto) returns (Article) {}
}

message ArticleListDto {
  map<string, string> params = 1;
  map<string, string> query = 2;
}

message ArticleReadDto {
  map<string, string> params = 1;
  map<string, string> query = 2;

  message Body {
    string name = 1;
  }
  map<string, Body> body = 3;
}

message Article {
  int32 id = 1;
  string name = 2;
}